--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ border-radius: 1em;
 height: 380px;
 width: 300px;
 margin: auto;
-background-color: #191b28;
+background-color: #363d69;
 box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 .display-box {
